Tue Jul 30 16:58:50 2002  George Lebl <jirka@5z.com>

	* Release 2.4.0.5

Tue Jul 30 16:56:51 2002  George Lebl <jirka@5z.com>

	* gui/gdmsetup.c: fix setting the welcome string properly

	* gui/gdmlogin.c: fix resizing of window.  Resize when the content
	  doesn't fit.  Update logo and background on the fly, this reduces
	  the wierdness when trying to change this stuff from the setup
	  proggie and the wm keeps disappearing since we're restarting the
	  greeter.  Need to solve the restart thing nicer.  Also when
	  we can't load the background image, set the color at least.

Tue Jul 30 14:36:28 2002  George Lebl <jirka@5z.com>

	* gui/gdmlanguages.c: added a few more untranslated strings

Tue Jul 30 14:13:53 2002  George Lebl <jirka@5z.com>

	* gui/gdmlanguages.c: add a failsafe en_US language in case there is
	  no en_* language in the locale alias file.  This replaces adding
	  failsafe 'C' locale, fixes #89452

Tue Jul 30 13:25:42 2002  George Lebl <jirka@5z.com>

	* daemon/slave.c, gui/gdmlogin.c, gui/gdmphotosetup.c,
	  gui/greeter/greeter_session.c: s/.gnome/.gnome2/, Applied patch
	  from #89454.  But still also read .gnome/photo if we can't find
	  .gnome2/photo

Tue Jul 30 12:00:28 2002  George Lebl <jirka@5z.com>

	* daemon/gdm.c: fix the linux-only proccess detection thing to work
	  on non-linux systems correctly (logic was reversed).  Properly cast
	  when printing to the pid file (being anal).  Close the pid file
	  before failing.  Don't print out the SYSLOG 'handling message'
	  debug thing as it just clutters debug info.

Mon Jul 29 17:45:59 2002  George Lebl <jirka@5z.com>

	* daemon/gdm.[ch]: use the ve_signal routines, remove gdm_signal
	  routines

	* gui/gdmlogin.c, gui/greeter/greeter.c,
	  gui/greeter/greeter_item_clock.[ch]: use the ve_signal routines
	  for the HUP signal to avoid possible crashes/races/hangs if the
	  signal handler comes in a bad time.  Also don't reset the graphical