@@ -1,3 +1,8 @@
+Mon Aug 05 10:12:57 2002  George Lebl <jirka@5z.com>
+
+	* config/Gnome.in, config/Xsession.in: whack xdm resource reading,
+	  that's only for xdm, doh!  Hmm ... where did I copy this from?
+
 Tue Jul 30 16:58:50 2002  George Lebl <jirka@5z.com>
 
 	* Release 2.4.0.5
